# ros2-performance

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  advanced.md  automatic_cross_compile.sh  build.sh  cc_workspace.sh  docker_setup.md  get_ros2_sources.sh  get_sysroot.sh  ignore_pkgs.sh  troubleshooting.md  usage.md
FastDDS-docker/MultiProcess_SierraNevada/: CMakeLists.txt
FastDDS-docker/MultiProcess_SierraNevada/include/: Macros.hpp  SubListener.hpp
FastDDS-docker/MultiProcess_SierraNevada/src/: arequipa.cpp  barcelona.cpp  geneva.cpp  georgetown.cpp  hamburg.cpp  lyon.cpp  mandalay.cpp  montreal.cpp  osaka.cpp  ponce.cpp
FastDDS-docker/SingleProcess_SierraNevada/: CMakeLists.txt
FastDDS-docker/SingleProcess_SierraNevada/include/: Macros.hpp
FastDDS-docker/SingleProcess_SierraNevada/src/: sierra_nevada.cpp
composition_benchmark/: CMakeLists.txt  README.md  package.xml
composition_benchmark/apps/: CMakeLists.txt  base_publisher_main.cpp  base_simple_main.cpp  base_subscriber_main.cpp  composable_pub_sub_main.cpp  composable_simple_main.cpp  factory_setup.hpp  multi-producer-node.cpp  publisher_main.cpp  run_tasks.hpp  run_test.hpp  simple_base_main.cpp  simple_composable_main.cpp  simple_nodes_test.hpp  subscriber_main.cpp
composition_benchmark/experiments/: .gitignore  pub-sub.sh  simple-nodes.sh
composition_benchmark/include/composition_benchmark/: base_node.hpp  composable_node.hpp  composable_publisher.hpp  composable_subscriber.hpp  global_factory.hpp
composition_benchmark/scripts/: run_psutil.py
composition_benchmark/src/: base_node.cpp  composable_node.cpp  composable_publisher.cpp  composable_subscriber.cpp  global_factory.cpp
irobot_benchmark/: .gitignore  CMakeLists.txt  README.md  package.xml
irobot_benchmark/performance_target/: sierra_nevada_rpi3.json
irobot_benchmark/profiles/: fastdds_settings_shm.xml  ignore_local_endpoints.xml  shared_memory_fastdds_config.xml
irobot_benchmark/src/: irobot_benchmark.cpp
irobot_benchmark/topology/: debug_sierra_nevada_reliable.json
irobot_benchmark/topology/full_topologies/: debug_sierra_nevada_fixed_size_best_effort.json  sierra_nevada_fixed_size_loaned.json  white_mountain_fixed_size_debug.json  white_mountain_fixed_size_loaned.json
irobot_benchmark/topology/multi_process/: pub_ipc_off_100kb.json  pub_ipc_off_4mb.json  pub_loaned_100kb.json  pub_loaned_10b.json  pub_loaned_4mb.json  sub_ipc_off_4mb.json
irobot_benchmark/topology/single_process/: pub_sub_loaned_1mb.json  pub_sub_loaned_4mb.json
irobot_interfaces_plugin/: CMakeLists.txt  package.xml
irobot_interfaces_plugin/msg/: Stamped25kb.msg  Stamped500kb.msg  Stamped50b.msg  Stamped50kb.msg  Stamped5kb.msg  Stamped5mb.msg  Stamped600kb.msg  Stamped8mb.msg  Stamped9Float32.msg  StampedInt64.msg  StampedVector.msg
irobot_interfaces_plugin/srv/: Stamped10kb.srv  Stamped1mb.srv  Stamped4mb.srv  Stamped8mb.srv
performance_composition/: CMakeLists.txt  package.xml
performance_composition/apps/: CMakeLists.txt
performance_composition/apps/simple-difference/: README.md  simple_base_main.cpp  simple_composable_main.cpp
performance_composition/include/performance_composition/: composable_node.hpp
performance_composition/src/: base_node.cpp  composable_node.cpp  global_factory.cpp  main.cpp
performance_metrics/: CMakeLists.txt  package.xml
performance_metrics/include/performance_metrics/: dummy_work.hpp  events_logger.hpp  resource_usage_logger.hpp  stat.hpp  stat_logger.hpp  tracker.hpp
performance_metrics/src/: dummy_work.cpp  events_logger.cpp  resource_usage_logger.cpp  stat_logger.cpp  tracker.cpp
performance_metrics/test/: CMakeLists.txt  test_dummy_work.cpp  test_stat.cpp  test_tracker.cpp
performance_test/: .gitignore  CMakeLists.txt  README.md  README_dev.md  bash_scriptsREADME.md  env.sh  package.xml
performance_test/experiments/crystal/: README.md
performance_test/include/cli/: options.hpp
performance_test/include/performance_test/: communication.hpp  events_logger.hpp  executors.hpp  fork_process.hpp  lifecycle_node.hpp  node.hpp  (+9 more)
performance_test/scripts/: client_service_ros2.sh  only_subs.sh  pub_sub_ros2.sh  pub_sub_separate_process.sh  remote_process.sh
performance_test/src/: events_logger.cpp  executors.cpp  fork_process.cpp  performance_node_base.cpp  resource_usage_logger.cpp  system.cpp  tracker.cpp
performance_test/test/: CMakeLists.txt  test_executors.cpp  test_lifecycle_node.cpp  test_node.cpp  test_stat.cpp  test_system.cpp  test_tracker.cpp
performance_test_examples/: CMakeLists.txt  package.xml
performance_test_examples/src/: client_nodes_main.cpp  examples_options.hpp  json_system_main.cpp  publisher_nodes_main.cpp  server_nodes_main.cpp  simple_client_service_main.cpp  simple_pub_sub_main.cpp  subscriber_nodes_main.cpp
performance_test_factory/: CMakeLists.txt  README.md  package.xml
performance_test_factory/examples/: CMakeLists.txt  client_nodes_main.cpp  examples_options.hpp  json_system_main.cpp  publisher_nodes_main.cpp  server_nodes_main.cpp  simple_architecture.json  simple_client_service_main.cpp  simple_pub_sub_main.cpp  subscriber_nodes_main.cpp
performance_test_factory/src/: cli_options.cpp  factory.cpp  load_plugins.cpp  names_utilities.cpp
performance_test_factory/test/: CMakeLists.txt  test_factory.cpp
performance_test_plugin_cmake/: README.md  generate_factory_plugin-extras.cmake  package.xml
performance_test_plugin_cmake/cmake/: generate_factory_plugin.cmake  generate_script.py
performances/benchmark/: CMakeLists.txt  README.md  package.xml  perf_target.json  sierra_nevada.json
performances/benchmark_msgs/: CMakeLists.txt  package.xml
performances/irobot_interfaces_plugin/: CMakeLists.txt  package.xml
performances/performance_test/: .gitignore  CMakeLists.txt  README.md  README_dev.md  bash_scriptsREADME.md  env.sh  generate_factory_plugin-extras.cmake  package.xml
performances/performance_test_factory/: CMakeLists.txt  README.md  create_new_topology.md  package.xml
performances/performance_test_msgs/: CMakeLists.txt  package.xml
(+388 files in other folders)
