<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>composition_benchmark</name>
  <version>0.1.0</version>
  <description>Benchmark applications to test ROS 2 composable nodes</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <author>Alberto Soragna</author>
  <license>BSD 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>irobot_interfaces_plugin</depend>
  <depend>performance_test</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
